# Yaqeen-protfolio

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: banner.html  contactme.html  home.html  message_submitted.html  myProjects.html  projectsdetails.html
